--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+      
+      <mat-card-title>Help Desk</mat-card-title>
+      <mat-card-subtitle>---</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="assets/img/home-image.svg" alt="Image Home">
+    <mat-card-content>
+      <p>
+        Olá! Seja bem vindo ao sistema Help Desk.<br />
+      Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk. <br />
+      O sistema está rodando na nuvem sendo o front na Vercel e o back na Heroku.<br />
+      
+      </p>
+    </mat-card-content>
+  </mat-card>
