--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+
+  <h1>Lista de técnicos</h1>
+
+  <button mat-stroked-button color="primary" class="mat-elevation-z8">Novo técnico</button>
+
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  </mat-form-field>
+
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource">
       
